--- a/templates/enumerate.html
+++ b/templates/enumerate.html
@@ -35,15 +35,33 @@
             </li>
         </ul>
         </nav>
-        <table class="table table-bordered table-dark">
-            {% for result in listing %}
-            <tr>
-            {% for elem in result %}
-                <td>{{elem}}</td>
-            {% endfor %}
-            </tr>
-        {% endfor %}
-    </table>
+        <div class="container">
+            <div class="row">
+              <div class="col-9">
+
+                <table class="table table-bordered table-striped">
+                    <thead class="thead-dark">
+                        <tr>
+                          <th scope="col">#</th>
+                          <th scope="col">Car Name</th>
+                          <th scope="col">Value of engine</th>
+                          <th scope="col">Year of manufacture</th>
+                        </tr>
+                      </thead>
+                    {% for result in listing %}
+                    <tr>
+                    {% for elem in result %}
+                        <td>{{elem}}</td>
+                    {% endfor %}
+                    </tr>
+                {% endfor %}
+            </table>
+              </div>
+              <div class="col-sm">
+              </div>
+            </div>
+          </div>
+        
 
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx" crossorigin="anonymous"></script>
